--- a/Hollys-main/index.html
+++ b/Hollys-main/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="할리스에서 할링하세요">
     <!-- OG -->
     <meta property="og:title" content="할리스">
-    <meta property="og:url" content="https://">
+    <meta property="og:url" content="https://rtt1006-portfolio.github.io/Hollys/">
     <meta property="og:image" content="./images/logo.jpg">
     <meta property="og:description" content="할리스 홈페이지를 방문해주셔서 감사합니다.">
     <!-- TW -->
     <meta name="twitter:card" content="hollys">
     <meta name="twitter:title" content="할리스">
-    <meta name="twitter:url" content="https://">
+    <meta name="twitter:url" content="https://rtt1006-portfolio.github.io/Hollys/">
     <meta name="twitter:image" content="./images/logo.jpg">
     <meta name="twitter:description" content="할리스 홈페이지를 방문해주셔서 감사합니다.">
 
@@ -58,6 +58,7 @@
         .sub-nav{display:none;padding-left:2em;font-size:12px;}
         .floating{display:none;position:fixed;top:18px;left:50%;transform:translate(600px,0);}
 
+        /* btn-nav style */
         .nav{position:absolute;left:0;right:0;top:100%;z-index:9997;background-color:#424242;overflow:hidden;display:none;}
         .nav ul{padding:0.5em;}        
         .nav li{margin:0.5em 0;font-size:16px;}        
@@ -146,8 +147,7 @@
             .main-nav>li{margin-bottom:0;}
             .sub-nav{position:absolute;left:0;right:0;top:100%;padding:1em 100px;background-color:#b5121b;justify-content: space-evenly;}
             .sub-nav a{font-size:16px;color:#fff;}
-            .floating{display:block;}
-
+            
             .nav:hover .sub-nav{height:220px;}
             .sub-nav>ul>li{float:left;text-align:center;}
             .sub-nav>ul>li:nth-child(1){padding:0 14px;}
@@ -159,6 +159,8 @@
             .sub-nav li li{margin:4px 0;}
             .sub-nav li li a{color:rgba(255,255,255,0.6);}
             .sub-nav li li a:hover{color:rgba(255,255,255,1);}
+            .floating{display:block;}
+            
 
             /* Main Style */
             .mo{display:none;}
